# CaisseDeChampagne

./: .gitignore  CMakeLists.txt  deps.sh  main.c
.run/: CaisseDeChampagne.run.xml  Continuous.run.xml  ContinuousBuild.run.xml  ContinuousConfigure.run.xml  ContinuousCoverage.run.xml  ContinuousMemCheck.run.xml  ContinuousStart.run.xml  ContinuousSubmit.run.xml  ContinuousTest.run.xml  ContinuousUpdate.run.xml  Experimental.run.xml  ExperimentalBuild.run.xml  ExperimentalConfigure.run.xml  ExperimentalCoverage.run.xml  ExperimentalMemCheck.run.xml  ExperimentalStart.run.xml  ExperimentalSubmit.run.xml  ExperimentalTest.run.xml  ExperimentalUpdate.run.xml  Nightly.run.xml  NightlyBuild.run.xml  NightlyConfigure.run.xml  NightlyCoverage.run.xml  NightlyMemCheck.run.xml  NightlyMemoryCheck.run.xml  NightlyStart.run.xml  NightlySubmit.run.xml  NightlyTest.run.xml  NightlyUpdate.run.xml  schema.sql.run.xml
sql/: schema.sql
src/: main.c
src/database/: database.c  database.h
src/models/: chapter.c  choice.c  entity.c  game.c  models.h  player.c  prototypes.c  prototypes.h  question.c  talk.c
src/ui/: eventListeners.c  ui.c  ui.h
